26-06-2026.2 - Fixed alignement issues

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ a:hover {
     size: inherit;
     height: 70px;
     margin: 0;
-    padding: 0 200px;
+    padding: 0 auto;
     align-items: center;
     position: fixed;
     width: 100%;
@@ -87,11 +87,11 @@ a:hover {
 }
 .footer-logo {
     display: flex;
-    padding: 10px 10px 0px 40px;
     flex-shrink: 0;
+    padding-right: 20px;
 }
-.footer-logo h3 {
-    margin: 0;
+.footer-logo h2 {
+    margin: auto 0;
     width: auto;
 }
 .footer-links {
@@ -102,7 +102,7 @@ a:hover {
 }
 .footer-links a {
     color: #a134cf;
-    padding: 30px 10px 30px 20px;
+    padding: 0px 20px 0px 20px;
     font-size: 20px;
 }
 .footer-links a:hover {
@@ -112,6 +112,7 @@ a:hover {
     .footer-top {
         flex-direction: column;
         align-items: center;
+        padding: 0;
     }
     .footer-links {
         display: flex;
